# Android-OpenCV-GL-Assignment

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/android_opencv_gl_assignment/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/android_opencv_gl_assignment/: MainActivity.kt  MyGLRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/android_opencv_gl_assignment/: ExampleUnitTest.kt
app/web/: index.html
app/web/src/: main.js  main.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
